--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@binance-chain/bsc-use-wallet": "^0.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.3.0",
     "@pancakeswap-libs/uikit": "^0.29.4",
     "@pandemicode/material-ui-dropzone": "^3.5.5",
     "@testing-library/jest-dom": "^5.11.4",
