--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react-alice-carousel": "^2.4.0",
     "react-apexcharts": "^1.3.9",
     "react-awesome-slider": "^4.1.0",
+    "react-bootstrap-range-slider": "^3.0.3",
     "react-browser-storage": "^0.1.0",
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.2",
+    "react-input-color": "^4.0.0",
     "react-minimal-side-navigation": "^1.9.2",
     "react-number-format": "^4.8.0",
     "react-plotly.js": "^2.5.1",
