--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@walletconnect/web3-provider": "^1.6.6",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "antd": "^4.20.7",
     "apexcharts": "^3.32.1",
     "axios": "^0.24.0",
     "bootstrap": "^4.6.0",
