--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "react-browser-storage": "^0.1.0",
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.2",
+    "react-export-excel": "^0.5.3",
     "react-i18next": "^11.15.4",
     "react-input-color": "^4.0.0",
     "react-minimal-side-navigation": "^1.9.2",
+    "react-new-window": "^0.2.1",
     "react-number-format": "^4.8.0",
     "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.6",
@@ -50,6 +52,7 @@
     "react-share": "^4.4.0",
     "react-social-share-buttons": "^1.0.2",
     "react-toastify": "^8.1.0",
+    "react-tooltip": "^4.2.21",
     "react-video-js-player": "^1.1.1",
     "reactstrap": "^8.9.0",
     "run": "^1.4.0",
