--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^4.6.0",
     "d3": "^7.3.0",
+    "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "i18next": "^21.6.11",
     "increase-memory-limit": "^1.0.7",
@@ -29,6 +30,7 @@
     "material-table": "^1.69.3",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
+    "pdf-lib": "^1.17.1",
     "plotly.js": "^2.8.3",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.4.0",
