--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@binance-chain/bsc-use-wallet": "^0.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.0",
