--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material/tooltip": "^14.0.0",
     "@mui/icons-material": "^5.3.0",
     "@pancakeswap-libs/uikit": "^0.29.4",
     "@pandemicode/material-ui-dropzone": "^3.5.5",
