--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@binance-chain/bsc-use-wallet": "^0.8.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material/tooltip": "^14.0.0",
-    "@mui/icons-material": "^5.3.0",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.7",
     "@pancakeswap-libs/uikit": "^0.29.4",
     "@pandemicode/material-ui-dropzone": "^3.5.5",
     "@testing-library/jest-dom": "^5.11.4",
