--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "typescript": "^4.4.4",
     "upgrade": "^1.1.0",
     "use-wallet": "^0.9.0",
+    "validator": "^13.7.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.6",
     "web3modal": "^1.9.4"
