--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "typescript": "^4.4.4",
     "upgrade": "^1.1.0",
     "validator": "^13.7.0",
-    "web-vitals": "^1.0.1",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=4096 start",
