--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "start": "react-scripts --max_old_space_size=4096 start",
     "build": "CI=false react-scripts --max_old_space_size=8192  build",
     "deploy": "aws --profile deployer --region us-east-1 s3 sync ./build s3://capnolearner-web --delete",
-    "invalidate": "aws --profile deployer cloudfront create-invalidation --distribution-id EG4544HB04AGI --paths /*'",
+    "invalidate": "aws --profile deployer cloudfront create-invalidation --distribution-id EG4544HB04AGI --paths '/*'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
