--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts --max_old_space_size=4096 start",
-    "build": "react-scripts --max_old_space_size=8192  build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "deploy": "aws --profile peter --region us-east-1 s3 sync ./build s3://capnolearner-web --delete",
     "invalidate": "aws --profile peter cloudfront create-invalidation --distribution-id EG4544HB04AGI --paths '/*'",
     "deploy_test": "aws --profile peter --region us-east-1 s3 sync ./build s3://capno-web --delete",
